tests/snapshots/golden_snapshot_tests__golden_receipt_chain_multiple_outcomes.snap
---
source: tests/golden_snapshot_tests.rs
expression: outcomes
---
[
    Complete,
    Partial,
    Failed,
]
